--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,12 @@
 [tool.poetry]
-name = "elements-of-computing-systems"
-version = "2024"
-description = "building projects in elements of computing systems 2nd edition"
-authors = ["Orest Tokovenko <hi@oresttokovenko.com>"]
-readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "~3.12"
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.4.6"
-mypy = "^1.10.0"
+ruff = "~0.4.6"
+mypy = "~1.10.0"
 
 [tool.ruff]
 target-version = 'py312'
@@ -53,6 +49,6 @@ follow_imports = "normal"
 # enables pretty-printed output for error messages
 pretty = true
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.poetry.scripts]
+assembler = 'projects.assembler:main'
+compiler = 'projects.compiler:main'
